--- a/cartodextcg_back/pom.xml
+++ b/cartodextcg_back/pom.xml
@@ -80,16 +80,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>${mapstruct.version}</version>
+			<version>1.5.5.Final</version> <!-- Vérifiez la dernière version sur Maven Central -->
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
-			<version>1.5.5.Final</version>
+			<version>1.5.5.Final</version> <!-- Vérifiez la dernière version sur Maven Central -->
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -98,9 +97,12 @@
 			<version>0.2.0</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>fr.jonathanluco</groupId>
+			<artifactId>generic</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
