--- a/cartodextcg_back/src/main/resources/application-DEV.properties
+++ b/cartodextcg_back/src/main/resources/application-DEV.properties
@@ -2,7 +2,7 @@ spring.devtools.livereload.enabled=false
 spring.h2.console.enabled=false
 
 server.port=9001
-
+jwt.secretKey=${JWT_SECRET_KEY}
 #datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/cartodextcg
 spring.datasource.username=root
@@ -15,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+logging.level.org.springframework.security=DEBUG
+
