--- a/cartodextcg_back/src/main/resources/application-dev.properties
+++ b/cartodextcg_back/src/main/resources/application-dev.properties
@@ -1,20 +1,24 @@
-spring.devtools.livereload.enabled=false
-spring.h2.console.enabled=false
-
-server.port=9001
-jwt.secretKey=${JWT_SECRET_KEY}
-#datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/cartodextcg
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#hibernate
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
-logging.level.org.springframework.security=DEBUG
+# JWT Secret Key
+jwt.secret.key=${JWT_SECRET_KEY:defaultSecretKey}
 
+# Serveur
+server.port=9001
+
+# Désactiver le console H2 et live reload
+spring.devtools.livereload.enabled=false
+spring.h2.console.enabled=false
+
+# Log Level Spring Security
+logging.level.org.springframework.security=TRACE
