alert: return to gm so code didn't work we need repare security

--- a/cartodextcg_back/src/main/resources/application-dev.properties
+++ b/cartodextcg_back/src/main/resources/application-dev.properties
@@ -21,4 +21,4 @@ spring.devtools.livereload.enabled=false
 spring.h2.console.enabled=false
 
 # Log Level Spring Security
-logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.security=DEBUG
